--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
+  "name": "employee-manager",
+  "version": "1.0.0",
+  "description": "A CLI application to help you keep track of your employees!",
+  "main": "server.js",
   "dependencies": {
-    "fs": "^0.0.1-security",
-    "inquirer": "^8.2.5"
-  }
+    "dotenv": "^16.3.1",
+    "inquirer": "^8.2.4",
+    "mysql2": "^3.4.0"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shadowasders/Employee-manager.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Shadowasders/Employee-manager/issues"
+  },
+  "homepage": "https://github.com/Shadowasders/Employee-manager#readme"
 }
